@@ -411,10 +411,10 @@ FT_BEGIN_HEADER
     /* We maintain two counters (in addition to the instruction counter) */
     /* that act as loop detectors for LOOPCALL and jump opcodes with     */
     /* negative arguments.                                               */
-    FT_Long            loopcall_counter;
-    FT_Long            loopcall_counter_max;
-    FT_Long            neg_jump_counter;
-    FT_Long            neg_jump_counter_max;
+    FT_ULong           loopcall_counter;
+    FT_ULong           loopcall_counter_max;
+    FT_ULong           neg_jump_counter;
+    FT_ULong           neg_jump_counter_max;
 
   } TT_ExecContextRec;
 
